Bug 440556 - Gestures support breaks touch input and is on by default here but off by default upstream
Summary: Gestures support breaks touch input and is on by default here but off by defa...
Status: RESOLVED FIXED
Alias: None
Product: wacomtablet
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: VHI normal
Target Milestone: ---
Assignee: Nate Graham
URL:
Keywords:
: 427258 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-08-03 14:14 UTC by Nate Graham
Modified: 2021-08-31 18:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2021-08-03 14:14:26 UTC
See https://github.com/linuxwacom/xf86-input-wacom/issues/178

Upstream has turned off gesture support by default due to various issues, but we still set it to on by default in our KCM, which then gets propagated by the KDED module. So once you install the package, gesture support is silently turned on, which breaks touch.
Comment 1 Nate Graham 2021-08-03 15:46:31 UTC
Working on this.
Comment 2 Bug Janitor Service 2021-08-03 15:57:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/wacomtablet/-/merge_requests/3
Comment 3 Nate Graham 2021-08-06 16:32:18 UTC
Git commit 3c10c7dfa865cb2cfd3ca6ed9c358b24689e5eee by Nate Graham.
Committed on 06/08/2021 at 16:32.
Pushed by ngraham into branch 'master'.

Turn off gesture support by default and warn when turning it on manually

Gesture support has been disabled by default upstream to work around an
inherent incompatibility with Wacom-provided gestures and touch support
in Qt; see https://bugreports.qt.io/browse/QTBUG-84756.

However the KCM still has it on by default, and its KDED module
propagates that change to effectively turn gestore support on
automatically. This results in touchscreen touch being broken for all
Qt software by default when this repo is installed.

This commit turns gesture support off by default to match the new
upstream setting and prevent broken touch support in Qt software, and
also shows a warning message about this if the user turns it on
manually.
FIXED-IN: 5.23

M  +1    -1    src/common/deviceprofiledefaults.cpp
M  +14   -1    src/kcmodule/touchpagewidget.cpp
M  +27   -0    src/kcmodule/touchpagewidget.ui

https://invent.kde.org/system/wacomtablet/commit/3c10c7dfa865cb2cfd3ca6ed9c358b24689e5eee
Comment 4 Nate Graham 2021-08-31 18:29:59 UTC
*** Bug 427258 has been marked as a duplicate of this bug. ***