Turn off gesture support by default and warn when turning it on manually

Gesture support has been disabled by default upstream to work around an
inherent incompatibility with Wacom-provided gestures and touch support
in Qt; see https://bugreports.qt.io/browse/QTBUG-84756.

However the KCM still has it on by default, and its KDED module
propagates that change to effectively turn gestore support on
automatically. This results in touchscreen touch being broken for all
Qt software by default when this repo is installed.

This commit turns gesture support off by default to match the new
upstream setting and prevent broken touch support in Qt software, and
also shows a warning message about this if the user turns it on
manually.

BUG: 440556
FIXED-IN: 5.23